Updated demo for hdd with head of dataframe

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -65,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6444256544113159 minutes 38.665539264678955 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "df = pd.read_sql(hdd.statement, engine)\n",
@@ -77,12 +85,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hdd</th>\n",
+       "      <th>min_date</th>\n",
+       "      <th>max_date</th>\n",
+       "      <th>sum_1</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>station_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3116.26</td>\n",
+       "      <td>1990-01-01</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>55525.0</td>\n",
+       "      <td>50.3332</td>\n",
+       "      <td>-125.4460</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5399.89</td>\n",
+       "      <td>1990-01-01</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>46063.0</td>\n",
+       "      <td>48.5697</td>\n",
+       "      <td>-81.3767</td>\n",
+       "      <td>5468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6623.72</td>\n",
+       "      <td>1990-01-01</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>48701.0</td>\n",
+       "      <td>58.7667</td>\n",
+       "      <td>-111.1170</td>\n",
+       "      <td>3610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5687.91</td>\n",
+       "      <td>1990-01-01</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>43608.0</td>\n",
+       "      <td>58.6214</td>\n",
+       "      <td>-117.1650</td>\n",
+       "      <td>3640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4587.14</td>\n",
+       "      <td>1990-01-01</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>51378.0</td>\n",
+       "      <td>49.6316</td>\n",
+       "      <td>-115.9620</td>\n",
+       "      <td>1398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       hdd   min_date   max_date    sum_1      lat       lon  station_id\n",
+       "0  3116.26 1990-01-01 2000-01-01  55525.0  50.3332 -125.4460         176\n",
+       "1  5399.89 1990-01-01 2000-01-01  46063.0  48.5697  -81.3767        5468\n",
+       "2  6623.72 1990-01-01 2000-01-01  48701.0  58.7667 -111.1170        3610\n",
+       "3  5687.91 1990-01-01 2000-01-01  43608.0  58.6214 -117.1650        3640\n",
+       "4  4587.14 1990-01-01 2000-01-01  51378.0  49.6316 -115.9620        1398"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
