--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,19 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "start_time = datetime.datetime(1990, 1, 1)\n",
     "end_time = datetime.datetime(2000, 1, 1)\n",
     "\n",
-    "msc = workflow_tools(start_time, end_time, month=1)"
+    "msc = WorkflowTools(start_time, end_time, month=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6444256544113159 minutes 38.665539264678955 seconds\n"
+      "0.6174753665924072 minutes 37.048521995544434 seconds\n"
      ]
     }
    ],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,6 @@
        "      <th>hdd</th>\n",
        "      <th>min_date</th>\n",
        "      <th>max_date</th>\n",
-       "      <th>sum_1</th>\n",
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
        "      <th>station_id</th>\n",
@@ -124,7 +123,6 @@
        "      <td>3116.26</td>\n",
        "      <td>1990-01-01</td>\n",
        "      <td>2000-01-01</td>\n",
-       "      <td>55525.0</td>\n",
        "      <td>50.3332</td>\n",
        "      <td>-125.4460</td>\n",
        "      <td>176</td>\n",
@@ -134,7 +132,6 @@
        "      <td>5399.89</td>\n",
        "      <td>1990-01-01</td>\n",
        "      <td>2000-01-01</td>\n",
-       "      <td>46063.0</td>\n",
        "      <td>48.5697</td>\n",
        "      <td>-81.3767</td>\n",
        "      <td>5468</td>\n",
@@ -144,7 +141,6 @@
        "      <td>6623.72</td>\n",
        "      <td>1990-01-01</td>\n",
        "      <td>2000-01-01</td>\n",
-       "      <td>48701.0</td>\n",
        "      <td>58.7667</td>\n",
        "      <td>-111.1170</td>\n",
        "      <td>3610</td>\n",
@@ -154,7 +150,6 @@
        "      <td>5687.91</td>\n",
        "      <td>1990-01-01</td>\n",
        "      <td>2000-01-01</td>\n",
-       "      <td>43608.0</td>\n",
        "      <td>58.6214</td>\n",
        "      <td>-117.1650</td>\n",
        "      <td>3640</td>\n",
@@ -164,7 +159,6 @@
        "      <td>4587.14</td>\n",
        "      <td>1990-01-01</td>\n",
        "      <td>2000-01-01</td>\n",
-       "      <td>51378.0</td>\n",
        "      <td>49.6316</td>\n",
        "      <td>-115.9620</td>\n",
        "      <td>1398</td>\n",
@@ -174,15 +168,15 @@
        "</div>"
       ],
       "text/plain": [
-       "       hdd   min_date   max_date    sum_1      lat       lon  station_id\n",
-       "0  3116.26 1990-01-01 2000-01-01  55525.0  50.3332 -125.4460         176\n",
-       "1  5399.89 1990-01-01 2000-01-01  46063.0  48.5697  -81.3767        5468\n",
-       "2  6623.72 1990-01-01 2000-01-01  48701.0  58.7667 -111.1170        3610\n",
-       "3  5687.91 1990-01-01 2000-01-01  43608.0  58.6214 -117.1650        3640\n",
-       "4  4587.14 1990-01-01 2000-01-01  51378.0  49.6316 -115.9620        1398"
+       "       hdd   min_date   max_date      lat       lon  station_id\n",
+       "0  3116.26 1990-01-01 2000-01-01  50.3332 -125.4460         176\n",
+       "1  5399.89 1990-01-01 2000-01-01  48.5697  -81.3767        5468\n",
+       "2  6623.72 1990-01-01 2000-01-01  58.7667 -111.1170        3610\n",
+       "3  5687.91 1990-01-01 2000-01-01  58.6214 -117.1650        3640\n",
+       "4  4587.14 1990-01-01 2000-01-01  49.6316 -115.9620        1398"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
