--- a/workflow-tool.ipynb
+++ b/workflow-tool.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,15 +630,14 @@
     "                      func.max(Obs.time).label(\"max_date\"), \n",
     "                      func.sum(func.extract(\"day\", Obs.time)),    \n",
     "                      History.lat, History.lon, \n",
-    "                      History.station_id)\n",
+    "                      History.station_id).join(History).join(Variable)\n",
     "    \n",
     "    query = query.group_by(History.lat, History.lon, History.station_id) \\\n",
     "                 .filter((180.0 - Obs.datum)>0.0) \\\n",
     "                 .filter(and_(Obs.time<=end_time, Obs.time>=start_time)) \\\n",
     "                 .having((func.extract(\"year\", func.max(Obs.time))-func.extract(\"year\", func.min(Obs.time))) >= yr_interval) \\\n",
     "                 .filter(and_(Variable.standard_name == 'air_temperature',\n",
-    "                              Variable.id==1394)) \\\n",
-    "                 .join(History).join(Variable)\n",
+    "                              Variable.id==1394))\n",
     "    return query\n",
     "\n",
     "def show_design_values():\n",
@@ -648,11 +647,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0 year interval\n"
+     ]
+    }
+   ],
    "source": [
-    "q = daily_mean_query()\n",
+    "q = deg_day_below_18_query()\n",
     "df_q = pd.read_sql(q.statement, engine)"
    ]
   },
