Updated and condensed documentation

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31\n",
       "1.0 31.0 744.0\n"
      ]
     }
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +196,7 @@
        "4        365           1.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,121 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>annual_rain</th>\n",
-       "      <th>time_min</th>\n",
-       "      <th>time_max</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>station_id</th>\n",
-       "      <th>obs_count</th>\n",
-       "      <th>completeness</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1013.6</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-12-31</td>\n",
-       "      <td>41.7833</td>\n",
-       "      <td>-82.6833</td>\n",
-       "      <td>6063</td>\n",
-       "      <td>365</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1102.7</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-12-31</td>\n",
-       "      <td>41.9500</td>\n",
-       "      <td>-82.5167</td>\n",
-       "      <td>6140</td>\n",
-       "      <td>365</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>990.4</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-12-31</td>\n",
-       "      <td>42.0333</td>\n",
-       "      <td>-82.9000</td>\n",
-       "      <td>6036</td>\n",
-       "      <td>365</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1094.2</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-12-31</td>\n",
-       "      <td>42.0431</td>\n",
-       "      <td>-82.6739</td>\n",
-       "      <td>6040</td>\n",
-       "      <td>365</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1097.7</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-12-31</td>\n",
-       "      <td>42.1034</td>\n",
-       "      <td>-83.0945</td>\n",
-       "      <td>5992</td>\n",
-       "      <td>365</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   annual_rain   time_min   time_max      lat      lon  station_id  obs_count  \\\n",
-       "0       1013.6 1990-01-01 1990-12-31  41.7833 -82.6833        6063        365   \n",
-       "1       1102.7 1990-01-01 1990-12-31  41.9500 -82.5167        6140        365   \n",
-       "2        990.4 1990-01-01 1990-12-31  42.0333 -82.9000        6036        365   \n",
-       "3       1094.2 1990-01-01 1990-12-31  42.0431 -82.6739        6040        365   \n",
-       "4       1097.7 1990-01-01 1990-12-31  42.1034 -83.0945        5992        365   \n",
-       "\n",
-       "   completeness  \n",
-       "0           1.0  \n",
-       "1           1.0  \n",
-       "2           1.0  \n",
-       "3           1.0  \n",
-       "4           1.0  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "annual_tot_rain = msc.query_annual_rain(session)\n",
     "pd.read_sql(annual_tot_rain.statement, engine).head()"
@@ -331,115 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>air_temperature</th>\n",
-       "      <th>time_min</th>\n",
-       "      <th>time_max</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>station_id</th>\n",
-       "      <th>completeness</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-6.000</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-01-31</td>\n",
-       "      <td>41.7833</td>\n",
-       "      <td>-82.6833</td>\n",
-       "      <td>6063</td>\n",
-       "      <td>0.903226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-9.210</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-01-31</td>\n",
-       "      <td>41.9500</td>\n",
-       "      <td>-82.5167</td>\n",
-       "      <td>6140</td>\n",
-       "      <td>0.967742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-9.500</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-01-31</td>\n",
-       "      <td>42.0333</td>\n",
-       "      <td>-82.9000</td>\n",
-       "      <td>6036</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-11.550</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-01-31</td>\n",
-       "      <td>42.0431</td>\n",
-       "      <td>-82.6739</td>\n",
-       "      <td>6040</td>\n",
-       "      <td>0.967742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-7.325</td>\n",
-       "      <td>1990-01-01</td>\n",
-       "      <td>1990-01-31</td>\n",
-       "      <td>42.1034</td>\n",
-       "      <td>-83.0945</td>\n",
-       "      <td>5992</td>\n",
-       "      <td>0.903226</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   air_temperature   time_min   time_max      lat      lon  station_id  \\\n",
-       "0           -6.000 1990-01-01 1990-01-31  41.7833 -82.6833        6063   \n",
-       "1           -9.210 1990-01-01 1990-01-31  41.9500 -82.5167        6140   \n",
-       "2           -9.500 1990-01-01 1990-01-31  42.0333 -82.9000        6036   \n",
-       "3          -11.550 1990-01-01 1990-01-31  42.0431 -82.6739        6040   \n",
-       "4           -7.325 1990-01-01 1990-01-31  42.1034 -83.0945        5992   \n",
-       "\n",
-       "   completeness  \n",
-       "0      0.903226  \n",
-       "1      0.967742  \n",
-       "2      1.000000  \n",
-       "3      0.967742  \n",
-       "4      0.903226  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query_temp = msc.query_design_temp_percentile(session)\n",
     "pd.read_sql(query_temp.statement, engine).head()"
@@ -447,121 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wet_bulb_temperature</th>\n",
-       "      <th>time_min</th>\n",
-       "      <th>time_max</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>station_id</th>\n",
-       "      <th>completeness</th>\n",
-       "      <th>obs_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>19.875</td>\n",
-       "      <td>1990-07-01</td>\n",
-       "      <td>1990-07-31</td>\n",
-       "      <td>41.7833</td>\n",
-       "      <td>-82.6833</td>\n",
-       "      <td>6063</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>19.375</td>\n",
-       "      <td>1990-07-01</td>\n",
-       "      <td>1990-07-31</td>\n",
-       "      <td>41.9500</td>\n",
-       "      <td>-82.5167</td>\n",
-       "      <td>6140</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18.750</td>\n",
-       "      <td>1990-07-01</td>\n",
-       "      <td>1990-07-31</td>\n",
-       "      <td>42.0333</td>\n",
-       "      <td>-82.9000</td>\n",
-       "      <td>6036</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>19.000</td>\n",
-       "      <td>1990-07-01</td>\n",
-       "      <td>1990-07-31</td>\n",
-       "      <td>42.0431</td>\n",
-       "      <td>-82.6739</td>\n",
-       "      <td>6040</td>\n",
-       "      <td>0.967742</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20.250</td>\n",
-       "      <td>1990-07-01</td>\n",
-       "      <td>1990-07-31</td>\n",
-       "      <td>42.1034</td>\n",
-       "      <td>-83.0945</td>\n",
-       "      <td>5992</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   wet_bulb_temperature   time_min   time_max      lat      lon  station_id  \\\n",
-       "0                19.875 1990-07-01 1990-07-31  41.7833 -82.6833        6063   \n",
-       "1                19.375 1990-07-01 1990-07-31  41.9500 -82.5167        6140   \n",
-       "2                18.750 1990-07-01 1990-07-31  42.0333 -82.9000        6036   \n",
-       "3                19.000 1990-07-01 1990-07-31  42.0431 -82.6739        6040   \n",
-       "4                20.250 1990-07-01 1990-07-31  42.1034 -83.0945        5992   \n",
-       "\n",
-       "   completeness  obs_count  \n",
-       "0      1.000000         31  \n",
-       "1      1.000000         31  \n",
-       "2      1.000000         31  \n",
-       "3      0.967742         30  \n",
-       "4      1.000000         31  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query_design_temp_dry = msc.query_design_temp_dry(session, month=7)\n",
     "pd.read_sql(query_design_temp_dry.statement, engine).head()"
@@ -569,121 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wet_bulb_temp</th>\n",
-       "      <th>time_min</th>\n",
-       "      <th>time_max</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>station_id</th>\n",
-       "      <th>completeness</th>\n",
-       "      <th>obs_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12.3300</td>\n",
-       "      <td>1990-07-01 00:00:00</td>\n",
-       "      <td>1990-07-31 23:00:00</td>\n",
-       "      <td>42.2756</td>\n",
-       "      <td>-82.9556</td>\n",
-       "      <td>6130</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>12.6050</td>\n",
-       "      <td>1990-07-01 10:00:00</td>\n",
-       "      <td>1990-07-31 20:00:00</td>\n",
-       "      <td>42.9922</td>\n",
-       "      <td>-82.3047</td>\n",
-       "      <td>5970</td>\n",
-       "      <td>0.434140</td>\n",
-       "      <td>323</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11.2000</td>\n",
-       "      <td>1990-07-01 00:00:00</td>\n",
-       "      <td>1990-07-31 23:00:00</td>\n",
-       "      <td>43.0331</td>\n",
-       "      <td>-81.1511</td>\n",
-       "      <td>6216</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11.7375</td>\n",
-       "      <td>1990-07-01 00:00:00</td>\n",
-       "      <td>1990-07-31 23:00:00</td>\n",
-       "      <td>43.1717</td>\n",
-       "      <td>-79.9342</td>\n",
-       "      <td>6373</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>496</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12.6000</td>\n",
-       "      <td>1990-07-01 11:00:00</td>\n",
-       "      <td>1990-07-31 21:00:00</td>\n",
-       "      <td>43.2000</td>\n",
-       "      <td>-79.1667</td>\n",
-       "      <td>6088</td>\n",
-       "      <td>0.418011</td>\n",
-       "      <td>311</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   wet_bulb_temp            time_min            time_max      lat      lon  \\\n",
-       "0        12.3300 1990-07-01 00:00:00 1990-07-31 23:00:00  42.2756 -82.9556   \n",
-       "1        12.6050 1990-07-01 10:00:00 1990-07-31 20:00:00  42.9922 -82.3047   \n",
-       "2        11.2000 1990-07-01 00:00:00 1990-07-31 23:00:00  43.0331 -81.1511   \n",
-       "3        11.7375 1990-07-01 00:00:00 1990-07-31 23:00:00  43.1717 -79.9342   \n",
-       "4        12.6000 1990-07-01 11:00:00 1990-07-31 21:00:00  43.2000 -79.1667   \n",
-       "\n",
-       "   station_id  completeness  obs_count  \n",
-       "0        6130      1.000000        744  \n",
-       "1        5970      0.434140        323  \n",
-       "2        6216      1.000000        744  \n",
-       "3        6373      0.666667        496  \n",
-       "4        6088      0.418011        311  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query_design_temp_wet = msc.query_design_temp_wet(session, month=7)\n",
     "pd.read_sql(query_design_temp_wet.statement, engine).head()"
@@ -691,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,6 +283,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
+  },
+  "nteract": {
+   "version": "nteract-on-jupyter@2.0.6"
   }
  },
  "nbformat": 4,
