updating join on pandas df

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -4492,7 +4492,7 @@
    "outputs": [],
    "source": [
     "rain_rate = msc.query_rain_rate_15(session)\n",
-    "df_rain_rate = pd.read_sql(rain_rate.statement, engine)"
+    "df_rain_rate = pd.read_sql(rain_rate.statement, engine)\n"
    ]
   },
   {
